--- a/src/styles/settings-page.css
+++ b/src/styles/settings-page.css
@@ -7,7 +7,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 9999;
+  z-index: 9001;
   width: 820px;
   max-width: calc(100vw - 60px);
   height: 600px;
